# design-patterns-cpp

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
.reference/: abstract_factory.cpp  adapter.cpp  bridge.cpp  builder.cpp  chain_of_responsibility.cpp  command.cpp  composite.cpp  decorator.cpp  facade.cpp  factory_method.cpp  flyweight.cpp  interpreter.cpp  iterator.cpp  mediator.cpp  memento.cpp  observer.cpp  prototype.cpp  proxy.cpp  singleton.cpp  state.cpp  strategy.cpp  template_method.cpp  visitor.cpp
build-ci/: CMakeCache.txt  Makefile  abstract_factory  adapter  bridge  builder  chain_of_responsibility  cmake_install.cmake  command  composite  decorator  facade  factory_method  flyweight  interpreter  iterator  mediator  memento  observer  prototype  proxy  singleton  state  strategy  template_method  visitor
docs/: design-patterns-reference.md  evaluation-system.md
scripts/: README.md  add_evaluation_guide.py  add_main.py  clear_templates.py  convert_templates.py  evaluate.py  evaluation_criteria.json  generate_tests.py  simplify_tests.py  update_headers.py  verify_runtime.sh  verify_structure.sh
src/behavioral/chain_of_responsibility/: main.cpp
src/behavioral/command/: main.cpp
src/behavioral/interpreter/: main.cpp
src/behavioral/iterator/: main.cpp
src/behavioral/mediator/: main.cpp
src/behavioral/memento/: main.cpp
src/behavioral/observer/: main.cpp
src/behavioral/state/: main.cpp
src/behavioral/strategy/: main.cpp
src/behavioral/template_method/: main.cpp
src/behavioral/visitor/: main.cpp
src/creational/abstract_factory/: main.cpp
src/creational/builder/: main.cpp
src/creational/factory_method/: main.cpp
src/creational/prototype/: main.cpp
src/creational/singleton/: main.cpp
src/structural/adapter/: main.cpp
src/structural/bridge/: main.cpp
src/structural/composite/: main.cpp
src/structural/decorator/: main.cpp
src/structural/facade/: main.cpp
src/structural/flyweight/: main.cpp
src/structural/proxy/: main.cpp
tests/: CMakeLists.txt  abstract_factory_test.cpp  adapter_test.cpp  all_patterns_test.cpp  bridge_test.cpp  builder_test.cpp  chain_of_responsibility_test.cpp  command_test.cpp  composite_test.cpp  decorator_test.cpp  facade_test.cpp  factory_method_test.cpp  flyweight_test.cpp  interpreter_test.cpp  iterator_test.cpp  mediator_test.cpp  memento_test.cpp  observer_test.cpp  prototype_test.cpp  proxy_test.cpp  singleton_test.cpp  state_test.cpp  strategy_test.cpp  template_method_test.cpp  visitor_test.cpp
